Architecture upto BLL Base done

--- a/BridalPOS.WinApp/BridalPOS.Bootstrapper/BridalPOS.Bootstrapper.csproj
+++ b/BridalPOS.WinApp/BridalPOS.Bootstrapper/BridalPOS.Bootstrapper.csproj
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.5.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.3.5.2\lib\net40\Autofac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Autofac.Extras.CommonServiceLocator, Version=3.2.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Extras.CommonServiceLocator.3.2.0\lib\net40\Autofac.Extras.CommonServiceLocator.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.2\lib\portable-windows8+net40+sl5+windowsphone8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,7 +51,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManagerRegistrar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryRegistrar.cs" />
+    <Compile Include="ServiceFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BridalPOS.Business.Interfaces\BridalPOS.Business.Interfaces.csproj">
+      <Project>{843a2dae-cbdb-4ef5-842e-f240c78ccfed}</Project>
+      <Name>BridalPOS.Business.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BridalPOS.Business\BridalPOS.Business.csproj">
+      <Project>{fe8ab3a6-6936-4691-b85d-5ae275c0538b}</Project>
+      <Name>BridalPOS.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BridalPOS.DataAccess.Interfaces\BridalPOS.DataAccess.Interfaces.csproj">
+      <Project>{5cc85b5a-679f-4f5a-a75a-2587d4a64a60}</Project>
+      <Name>BridalPOS.DataAccess.Interfaces</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BridalPOS.DataAccess\BridalPOS.DataAccess.csproj">
+      <Project>{e8af035e-6899-4028-997f-6495f4f14f21}</Project>
+      <Name>BridalPOS.DataAccess</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BridalPOS.Models\BridalPOS.Models.csproj">
+      <Project>{e4d9ee6e-698c-4824-b338-a38b8d2c6c86}</Project>
+      <Name>BridalPOS.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
