--- a/BridalPOS.WinApp/BridalPOS.Utilities/BridalPOS.Utilities.csproj
+++ b/BridalPOS.WinApp/BridalPOS.Utilities/BridalPOS.Utilities.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E8AF035E-6899-4028-997F-6495F4F14F21}</ProjectGuid>
+    <ProjectGuid>{66C790BC-7C22-4102-87B9-EB682D1C54CC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BridalPOS.DataAccess</RootNamespace>
-    <AssemblyName>BridalPOS.DataAccess</AssemblyName>
+    <RootNamespace>BridalPOS.Utilities</RootNamespace>
+    <AssemblyName>BridalPOS.Utilities</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,16 +30,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,25 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base\Repository.cs" />
-    <Compile Include="DbCotexts\BridalPOSContext.cs" />
+    <Compile Include="DTO\SaveResult.cs" />
+    <Compile Include="DTO\ServiceResult.cs" />
+    <Compile Include="DTO\ServiceResultList.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\_RepositoriesForExistingModels.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <ProjectReference Include="..\BridalPOS.DataAccess.Interfaces\BridalPOS.DataAccess.Interfaces.csproj">
-      <Project>{5cc85b5a-679f-4f5a-a75a-2587d4a64a60}</Project>
-      <Name>BridalPOS.DataAccess.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BridalPOS.Models\BridalPOS.Models.csproj">
-      <Project>{e4d9ee6e-698c-4824-b338-a38b8d2c6c86}</Project>
-      <Name>BridalPOS.Models</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
